<?xml version="1.0"?>
<package format="2">
    <name>turtlebot3_atf</name>
    <version>0.1.0</version>
    <description>Turtlebot3 atf test app.</description>

    <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>

    <author email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>atf_core</depend>
    <depend>roslaunch</depend>
    <depend>rospy</depend>
    <test_depend>rostest</test_depend>

</package>
